--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,8 +8,8 @@
 
     <title>{{ title }}</title>
   </head>
-  <body class="w-screen h-screen bg-slate-400 flex flex-col text-gray-800 align-center justify-center">
-    <div class="flex flex-col w-screen h-screen">
+  <body class="bg-primary-blue text-white w-screen h-screen flex flex-col">
+    <div class="flex flex-col w-2/3 h-screen align-center self-center">
 
       {% include "components/navbar.njk" %}
 
