Added responsive styles to the nav section and created the base of our featured interview.

--- a/src/_includes/components/navbar.njk
+++ b/src/_includes/components/navbar.njk
@@ -1,9 +1,12 @@
-<nav class="h-20 w-full">
-  <ul class="flex p-7 items-center justify-between w-full h-full bg-primary text-gray-300 mt-20">
+<nav class="flex flex-col md:flex-row justify-between w-full bg-primary text-gray-300 mt-12 items-start">
+  <div class="flex flex-col w-full md:w-1/2">
     <a href="/">
       <img src="/img/dd_logo.png"/>
     </a>
-    <button class="bg-discord-blue p-2 rounded-xl">
+    <p class="heading-text mt-10 md:mt-20 w-full text-lg md:text-2xl">Showcasing community members and the topics they are passionate about through an ongoing interview series on the Jamstack Discord Stage</p>
+  </div>
+
+  <button class="bg-discord-blue p-1 rounded-xl self-center md:self-start w-1/2 md:w-1/5 mt-6 md:mt-0">
       Join the Discord
-    </button>
-  </ul>
+  </button>
+</nav>
