--- a/src/index.njk
+++ b/src/index.njk
@@ -2,3 +2,7 @@
 title: Homepage
 layout: layouts/base.njk
 ---
+
+<div class="rounded-xl w-full h-[480px] mx-auto bg-border-gradient-pink-orange mt-12">
+  <div class="flex flex-col justify-between h-full bg-primary-blue text-white rounded-lg p-4"></div>
+</div>
