--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,7 @@ layout: layouts/base.njk
 
 {% for episode in episodes %}
   {% if episode.up_next === true %}
-    <div class="rounded-xl w-full h-[480px] mx-auto bg-border-gradient-pink-orange mt-12">
+    <div class="rounded-xl w-full h-[480px] mx-auto bg-border-gradient-pink-orange p-[18px] mt-12">
       <div class="flex flex-col justify-between h-full bg-primary-blue text-white rounded-lg p-4">
         <img src={{ episode.photo }}/>
         <h1>{{ episode.name }}</h1>
@@ -15,3 +15,20 @@ layout: layouts/base.njk
     </div>
   {% endif %}
 {% endfor %}
+
+<h1 class="text-2xl text-center my-20">Previous Episodes</h1>
+
+<div class="flex flex-wrap gap-2 items-start">
+  {% for episode in episodes %}
+    {% if episode.up_next === false %}
+      <div class="rounded-xl w-[250px] h-[300px] mx-auto hover:bg-gradient-to-r from-pink to-orange p-[4px] mt-12">
+        <div class="flex flex-col justify-between h-full bg-gradient-blue-purple text-white rounded-lg p-4">
+          <img src={{ episode.photo }}/>
+          <h1>{{ episode.name }}</h1>
+          <p>{{ episode.title }}</p>
+          <p>{{ episode.topic }}</p>
+        </div>
+      </div>
+    {% endif %}
+  {% endfor %}
+</div>
