--- a/src/styles.css
+++ b/src/styles.css
@@ -33,5 +33,5 @@ button {
 .bg-gradient-blue-purple,
 .hover\:bg-gradient-blue-purple:hover,
 .hover\:bg-gradient-blue-purple:focus {
-  background: linear-gradient(30.7deg, #100071 -3.51%, #A400BE 105.17%);
+  background: linear-gradient(30.7deg, #0760e5 -3.51%, #fc4aea 105.17%);
 }
