--- a/src/styles.css
+++ b/src/styles.css
@@ -35,3 +35,48 @@ button {
 .hover\:bg-gradient-blue-purple:focus {
   background: linear-gradient(30.7deg, #0760e5 -3.51%, #fc4aea 105.17%);
 }
+
+
+/* Credit:  https://codepen.io/3fingers/pen/wvobrdv */
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  display:flex;
+  transform: translateX(-25%);
+}
+
+.left {
+  @apply bg-primary-blue;  
+  height: 100%;
+  clip-path: polygon(10% 0, 100% 0, 50% 100%, 10% 100%);
+  flex: 1 0 75%;
+  transform: translateX(25%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: -10px;
+}
+
+.right {
+  @apply bg-primary-blue;
+  height: 100%;  
+  clip-path: polygon(50% 0, 92% 0, 92% 100%, 0% 100%);
+  flex: 1 0 75%;
+  transform: translateX(-25%);
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+  margin-left: 10px;
+}
+
+
+/* .left .text {
+  width:50%;
+  padding-left: 10%;
+}
+
+.right .text {
+  width:50%;
+  padding-right: 10%;
+} */
