--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css"/>
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@500;900&display=swap" rel="stylesheet">
 
     <title>{{ title }}</title>
   </head>
   <body class="bg-primary-blue text-white w-screen h-screen flex flex-col">
-    <div class="flex flex-col w-[80%] md:w-1/3 h-screen align-center self-center">
+    <div class="flex flex-col w-[80%] md:w-2/5 h-screen align-center self-center">
 
       {% include "components/navbar.njk" %}
 
-      <main>
+      <main class="pb-10">
         {{ content | safe }}
       </main>
     </div>
