--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,11 @@
 body {
   font-family: "Mulish";
   font-weight: 600;
-  font-style: normal
+  font-style: normal;
 }
 
 button {
-  font-family: 'Pacaembu';
+  font-family: "Pacaembu";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -23,11 +23,11 @@ button {
 .bg-gradient-pink-orange,
 .hover\:bg-gradient-pink-orange:hover,
 .hover\:bg-gradient-pink-orange:focus {
-  background: #E7017A linear-gradient(91.78deg, #E7017A 2.57%, #DF4A1F 96.33%);
+  background: #e7017a linear-gradient(91.78deg, #e7017a 2.57%, #df4a1f 96.33%);
 }
 
 .bg-border-gradient-pink-orange {
-  @apply bg-gradient-to-r from-pink to-orange ;
+  @apply bg-gradient-to-r from-pink to-orange;
 }
 
 .bg-gradient-blue-purple,
@@ -36,40 +36,42 @@ button {
   background: linear-gradient(30.7deg, #0760e5 -3.51%, #fc4aea 105.17%);
 }
 
-
 /* Credit:  https://codepen.io/3fingers/pen/wvobrdv */
 
 .wrapper {
   width: 100%;
   height: 100%;
-  display:flex;
-  transform: translateX(-25%);
+  display: flex;
+  transform: translateX(-24%);
 }
 
 .left {
-  @apply bg-primary-blue;  
+  @apply bg-primary-blue;
   height: 100%;
-  clip-path: polygon(10% 0, 100% 0, 50% 100%, 10% 100%);
-  flex: 1 0 75%;
+  clip-path: polygon(0% 0, 70% 0, 35% 100%, 0% 100%);
+  /* clip-path: polygon(10% 0, 100% 0, 50% 100%, 10% 100%); */
+  flex: 1 0 100%;
   transform: translateX(25%);
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  padding: 2rem;
+  gap: 32px;
   margin-left: -10px;
 }
 
 .right {
   @apply bg-primary-blue;
-  height: 100%;  
-  clip-path: polygon(50% 0, 92% 0, 92% 100%, 0% 100%);
-  flex: 1 0 75%;
-  transform: translateX(-25%);
+  height: 100%;
+  clip-path: polygon(69% 0, 100% 0, 100% 100%, 34% 100%);
+  /* clip-path: polygon(50% 0, 92% 0, 92% 100%, 0% 100%); */
+  flex: 1 0 100%;
+  transform: translateX(-75%);
   display: flex;
-  align-items: center;
-  justify-content: center;  
+  align-items: flex-end;
+  padding-right: 20px;
+  justify-content: center;
   margin-left: 10px;
 }
-
 
 /* .left .text {
   width:50%;
