--- a/src/index.njk
+++ b/src/index.njk
@@ -5,11 +5,11 @@ layout: layouts/base.njk
 
 {% for episode in episodes %}
   {% if episode.up_next === true %}
-    <div class="rounded-xl w-full lg:min-w-[700px] h-[420px] mx-auto bg-border-gradient-pink-orange p-[20px] mt-12 overflow-hidden font-black">
+    <div class="rounded-xl w-full lg:min-w-[700px] h-[480px] mx-auto bg-border-gradient-pink-orange p-[24px] mt-12 overflow-hidden font-black">
       <div class="wrapper">
         <div class="left flex-col">
-          <img class="w-[50%] mb-3" src="/img/dd_logo_2.png" />
-          <div class="w-[50%]">            
+          <img class="w-[40%] mb-3" src="/img/dd_logo_2.png"/>
+          <div class="w-[30%]">
             <p class="text-2xl font-dark">Collaboration between devs and designers + having fun with CSS</p>
             <p class="mt-3 text-orange capitalize">{{ episode.when }}</p>
           </div>
@@ -19,10 +19,10 @@ layout: layouts/base.njk
           </div>
         </div>
         <div class="right flex-col">
-          <img class="rounded-full w-[35%]" src="{{ episode.photo | removeTrailingSlash }}"/>
-          <h1 class="bg-pink px-12 py-3 mt-[-32px] font-["ITC Avant Garde Gothic Pro"]">{{ episode.name }}</h1>
-          <p class="font-medium leading-10">{{ episode.title }}</p>
-          <p class="text-green-accent">{{episode.twitter}}</p>
+          <img class="rounded-full w-[30%]" src="{{ episode.photo | removeTrailingSlash }}"/>
+          <h1 class="bg-pink px-12 py-3 mr-4 mt-[-32px] font-["ITC Avant Garde Gothic Pro"]">{{ episode.name }}</h1>
+          <p class="font-medium leading-10 mr-4">{{ episode.title }}</p>
+          <p class="text-green-accent mr-4">{{episode.twitter}}</p>
         </div>
       </div>
     </div>
@@ -31,16 +31,19 @@ layout: layouts/base.njk
 
 <h1 class="text-2xl text-center my-20">Previous Episodes</h1>
 
-<div class="flex flex-wrap gap-1 w-full">
+<div class="grid grid-cols-1 lg:grid-cols-3 gap-y-20 gap-x-3">
   {% for episode in episodes %}
     {% if episode.up_next === false %}
-      <div class="rounded-2xl w-[250px] mx-auto hover:bg-gradient-to-r from-pink to-orange p-[6px] mt-20">
-        <div class="flex flex-col justify-between h-full bg-gradient-blue-purple text-white rounded-2xl p-5">
-          <img class="rounded-full self-center mt-[-86px] w-[140px] h-[140px]" src="{{ episode.photo | removeTrailingSlash }}"/>
-          <h2 class='bg-primary-blue text-center mt-[-25px] rounded-md py-1'>{{ episode.name }}</h2>
-          <p>{{ episode.title }}</p>
-          <p>{{ episode.topic }}</p>
-          <p>{{episode.when}}</p>
+      <div class="rounded-2xl w-full mx-auto h-auto hover:bg-gradient-to-r from-pink to-orange p-[6px] mt-20">
+        <div class="flex flex-col space-around h-full bg-gradient-blue-purple text-white rounded-2xl p-7">
+          <img class="rounded-full self-center mt-[-92px] w-[200px] h-[200px]" src="{{ episode.photo | removeTrailingSlash }}"/>
+          <h2 class='bg-primary-blue text-center mt-[-32px] rounded-md py-3'>{{ episode.name }}</h2>
+          <span class="mt-4">
+            <p class="font-medium text-md">{{ episode.title }}</p>
+            <p class="text-green-accent">{{episode.twitter}}</p>
+          </span>
+          <p class="font-black text-2xl mt-10">{{ episode.topic }}</p>
+          <p class="mt-10 justify-self-end">{{episode.when}}</p>
         </div>
       </div>
     {% endif %}
