--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,7 @@ layout: layouts/base.njk
 
 {% for episode in episodes %}
   {% if episode.up_next === true %}
-    <div class="rounded-xl w-full lg:min-w-[700px] h-[480px] mx-auto bg-border-gradient-pink-orange p-[24px] mt-12 overflow-hidden font-black">
+    <div class="rounded-xl w-full lg:min-w-[700px] h-[520px] mx-auto bg-border-gradient-pink-orange p-[24px] mt-12 overflow-hidden font-black">
       <div class="wrapper">
         <div class="left flex-col">
           <img class="w-[40%] mb-3" src="/img/dd_logo_2.png"/>
@@ -13,14 +13,14 @@ layout: layouts/base.njk
             <p class="text-2xl font-dark">Collaboration between devs and designers + having fun with CSS</p>
             <p class="mt-3 text-orange capitalize">{{ episode.when }}</p>
           </div>
-          <div>
+          <div class="mt-6">
             <p>Hosted By Domitrius Clark</p>
             <p class="text-discord-blue">discord.gg/jamstack</p>
           </div>
         </div>
         <div class="right flex-col">
           <img class="rounded-full w-[30%]" src="{{ episode.photo | removeTrailingSlash }}"/>
-          <h1 class="bg-pink px-12 py-3 mr-4 mt-[-32px] font-["ITC Avant Garde Gothic Pro"]">{{ episode.name }}</h1>
+          <h1 class="bg-pink px-16 py-5 mt-[-32px]">{{ episode.name }}</h1>
           <p class="font-medium leading-10 mr-4">{{ episode.title }}</p>
           <p class="text-green-accent mr-4">{{episode.twitter}}</p>
         </div>
@@ -42,8 +42,8 @@ layout: layouts/base.njk
             <p class="font-medium text-md">{{ episode.title }}</p>
             <p class="text-green-accent">{{episode.twitter}}</p>
           </span>
-          <p class="font-black text-2xl mt-10">{{ episode.topic }}</p>
-          <p class="mt-10 justify-self-end">{{episode.when}}</p>
+          <p class="font-black text-2xl mt-8">{{ episode.topic }}</p>
+          <p class="mt-8 justify-self-end">{{episode.when}}</p>
         </div>
       </div>
     {% endif %}
