--- a/src/styles.css
+++ b/src/styles.css
@@ -54,7 +54,7 @@ button {
   transform: translateX(25%);
   display: flex;
   align-items: flex-start;
-  padding: 3rem;
+  padding: 4rem;
   gap: 32px;
   margin-left: -10px;
 }
@@ -68,7 +68,7 @@ button {
   transform: translateX(-76%);
   display: flex;
   align-items: flex-end;
-  padding-right: 20px;
+  padding-right: 6rem;
   justify-content: center;
   margin-left: 10px;
 }
