Responsive behavior throughout the app.

--- a/src/_includes/components/navbar.njk
+++ b/src/_includes/components/navbar.njk
@@ -3,7 +3,7 @@
     <a href="/">
       <img src="/img/dd_logo.png"/>
     </a>
-    <p class="heading-text mt-10 md:mt-20 w-full text-lg md:text-2xl">Showcasing community members and the topics they are passionate about through an ongoing interview series on the Jamstack Discord Stage</p>
+    <p class="heading-text mt-10 md:mt-20 w-full text-lg md:text-xl lg::text-2xl">Showcasing community members and the topics they are passionate about through an ongoing interview series on the Jamstack Discord Stage</p>
   </div>
 
   <button class="bg-discord-blue p-1 rounded-xl self-center md:self-start w-1/2 md:w-1/5 mt-6 md:mt-0">
