--- a/src/index.njk
+++ b/src/index.njk
@@ -19,12 +19,12 @@ layout: layouts/base.njk
       </div>
     </div>
     {# TABLET AND UP #}
-    <div class="rounded-xl hidden md:block w-full lg:min-w-[700px] h-[540px] 3xl:h-[640px] mx-auto bg-border-gradient-pink-orange p-[24px] mt-12 overflow-hidden font-black">
+    <div class="rounded-xl hidden md:block w-full lg:min-w-[700px] h-[420px] lg:h-[540px] 3xl:h-[720px] mx-auto bg-border-gradient-pink-orange p-[12px] lg:p-[24px] 3xl:p-[36px] mt-12 overflow-hidden font-black">
       <div class="wrapper">
-        <div class="left flex-col">
-          <img class="w-[40%] mb-3" src="/img/dd_logo_2.png"/>
-          <div class="w-[30%]">
-            <p class="text-2xl font-dark">Collaboration between devs and designers + having fun with CSS</p>
+        <div class="left flex-col gap-[42px] lg:gap-[75px] 3xl:gap-[100px] p-6 lg:p-16">
+          <img class="w-[50%] lg:w-[40%] mb-3" src="/img/dd_logo_2.png"/>
+          <div class="w-[40%] lg:w-[30%]">
+            <p class="text-2xl 3xl:text-4xl font-dark">{{ episode.topic}}</p>
             <p class="mt-3 text-orange capitalize">{{ episode.when }}</p>
           </div>
           <div class="mt-6">
@@ -32,11 +32,11 @@ layout: layouts/base.njk
             <p class="text-discord-blue">discord.gg/jamstack</p>
           </div>
         </div>
-        <div class="right flex-col">
-          <img class="rounded-full w-[30%]" src="{{ episode.photo | removeTrailingSlash }}"/>
-          <h1 class="bg-pink px-16 py-5 mt-[-32px]">{{ episode.name }}</h1>
-          <p class="font-medium leading-10 mr-4">{{ episode.title }}</p>
-          <p class="text-green-accent mr-4">{{episode.twitter}}</p>
+        <div class="right flex-col pr-10 lg:pr-24">
+          <img class="rounded-full w-[35%] lg:w-[30%]" src="{{ episode.photo | removeTrailingSlash }}"/>
+          <h1 class="bg-pink text-xl 3xl:text-3xl px-4 lg:px-16 3xl:px-18 py-2 lg:py-5 mt-[-32px]">{{ episode.name }}</h1>
+          <p class="font-medium leading-10 mr-4 3xl:mr-0">{{ episode.title }}</p>
+          <p class="text-green-accent mr-4 3xl:mr-0">{{episode.twitter}}</p>
         </div>
       </div>
     </div>
