--- a/src/styles.css
+++ b/src/styles.css
@@ -36,8 +36,10 @@ button {
   background: linear-gradient(30.7deg, #0760e5 -3.51%, #fc4aea 105.17%);
 }
 
+
 /* Credit:  https://codepen.io/3fingers/pen/wvobrdv */
 
+/* TODO: MOVE THESE STYLES TO TAILWIND CLASSES */
 .wrapper {
   width: 100%;
   height: 100%;
@@ -54,8 +56,6 @@ button {
   transform: translateX(25%);
   display: flex;
   align-items: flex-start;
-  padding: 4rem;
-  gap: 32px;
   margin-left: -10px;
 }
 
@@ -68,7 +68,6 @@ button {
   transform: translateX(-76%);
   display: flex;
   align-items: flex-end;
-  padding-right: 6rem;
   justify-content: center;
   margin-left: 10px;
 }
