Fixed the broken font on buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,11 +9,7 @@ body {
 }
 
 button {
-  font-family: "Pacaembu";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
+  font-size: .9rem;
 }
 
 .heading-text {
