--- a/src/_includes/components/navbar.njk
+++ b/src/_includes/components/navbar.njk
@@ -1,12 +1,12 @@
-<nav class="flex flex-col md:flex-row justify-between w-full bg-primary text-gray-300 mt-12 items-start">
-  <div class="flex flex-col w-full md:w-1/2">
+<nav class="flex flex-col  w-full bg-primary text-gray-300 mt-12 items-start">
+  <div class="flex flex-col md:flex-row md:justify-between w-full">
     <a href="/">
-      <img src="/img/dd_logo.png"/>
+      <img class="md:w-[70%]" src="/img/dd_logo.png"/>
     </a>
-    <p class="heading-text mt-10 md:mt-20 w-full text-lg md:text-xl lg::text-2xl">Showcasing community members and the topics they are passionate about through an ongoing interview series on the Jamstack Discord Stage</p>
+    <button class="bg-discord-blue px-5 py-2 rounded-xl self-center md:self-end mt-4 md:mt-0">
+      Join the Discord
+    </button>
   </div>
 
-  <button class="bg-discord-blue px-1 py-2 rounded-xl self-center md:self-start w-1/2 md:w-1/5 mt-6 md:mt-0">
-      Join the Discord
-  </button>
+  <p class=" mt-10 md:mt-20 text-center w-full text-lg md:text-3xl lg:text-4">Discussions with developers from the Jamstack community and the topics they're passionate about</p>
 </nav>
