--- a/src/index.njk
+++ b/src/index.njk
@@ -22,9 +22,8 @@ layout: layouts/base.njk
     <div class="rounded-xl hidden md:block w-full lg:min-w-[700px] h-[420px] lg:h-[540px] 3xl:h-[720px] mx-auto bg-border-gradient-pink-orange p-[12px] lg:p-[24px] 3xl:p-[36px] mt-12 overflow-hidden font-black">
       <div class="wrapper">
         <div class="left flex-col gap-[42px] lg:gap-[75px] 3xl:gap-[100px] p-6 lg:p-16">
-          <img class="w-[50%] lg:w-[40%] mb-3" src="/img/dd_logo_2.png"/>
           <div class="w-[40%] lg:w-[30%]">
-            <p class="text-2xl 3xl:text-4xl font-dark">{{ episode.topic}}</p>
+            <p class="text-2xl lg:text-4xl 3xl:text-6xl font-dark">{{ episode.topic}}</p>
             <p class="mt-3 text-orange capitalize">{{ episode.when }}</p>
           </div>
           <div class="mt-6">
@@ -49,16 +48,16 @@ layout: layouts/base.njk
 <div class="grid grid-cols-1 lg:grid-cols-3 gap-y-20 gap-x-3">
   {% for episode in episodes %}
     {% if episode.up_next === false %}
-      <div class="rounded-2xl w-full mx-auto h-auto hover:bg-gradient-to-r from-pink to-orange p-[6px] mt-20">
-        <div class="flex flex-col space-around h-full bg-gradient-blue-purple text-white rounded-2xl p-7">
+      <div class="rounded-2xl w-full mx-auto h-auto bg-gradient-to-r from-pink to-orange p-[6px] mt-20">
+        <div class="flex flex-col space-around h-full bg-primary-blue  text-white rounded-2xl p-7">
           <img class="rounded-full self-center mt-[-92px] w-[200px] h-[200px]" src="{{ episode.photo | removeTrailingSlash }}"/>
-          <h2 class='bg-primary-blue text-center mt-[-32px] rounded-md py-3'>{{ episode.name }}</h2>
+          <h2 class='bg-gradient-pink-orange text-center mt-[-32px] rounded-md py-3'>{{ episode.name }}</h2>
           <span class="mt-4">
-            <p class="font-medium text-md">{{ episode.title }}</p>
-            <p class="text-green-accent">{{episode.twitter}}</p>
+            <p class="font-medium text-sm">{{ episode.title }}</p>
+            <p class="text-sm text-green-accent">{{episode.twitter}}</p>
           </span>
-          <p class="font-black text-2xl mt-8">{{ episode.topic }}</p>
-          <p class="mt-8 justify-self-end">{{episode.when}}</p>
+          <p class="font-black text-3xl mt-8">{{ episode.topic }}</p>
+          <p class="text-sm mt-8 justify-self-end">{{episode.when}}</p>
         </div>
       </div>
     {% endif %}
