--- a/src/index.njk
+++ b/src/index.njk
@@ -48,10 +48,10 @@ layout: layouts/base.njk
 <div class="grid grid-cols-1 lg:grid-cols-3 gap-y-20 gap-x-3">
   {% for episode in episodes %}
     {% if episode.up_next === false %}
-      <div class="rounded-2xl w-full mx-auto h-auto bg-gradient-to-r from-pink to-orange p-[6px] mt-20">
+      <div class="rounded-2xl w-full mx-auto h-auto bg-gradient-to-r from-pink to-orange hover:from-[#0760e5] hover:to-[#fc4aea] p-[6px] mt-20">
         <div class="flex flex-col space-around h-full bg-primary-blue  text-white rounded-2xl p-7">
           <img class="rounded-full self-center mt-[-92px] w-[200px] h-[200px]" src="{{ episode.photo | removeTrailingSlash }}"/>
-          <h2 class='bg-gradient-pink-orange text-center mt-[-32px] rounded-md py-3'>{{ episode.name }}</h2>
+          <h2 class='bg-pink text-center mt-[-32px] rounded-md py-3'>{{ episode.name }}</h2>
           <span class="mt-4">
             <p class="font-medium text-sm">{{ episode.title }}</p>
             <p class="text-sm text-green-accent">{{episode.twitter}}</p>
