--- a/src/_includes/components/navbar.njk
+++ b/src/_includes/components/navbar.njk
@@ -1,12 +1,17 @@
-<nav class="flex flex-col  w-full bg-primary text-gray-300 mt-12 items-start">
-  <div class="flex flex-col md:flex-row md:justify-between w-full">
+<nav class="bg-primary text-gray-300 mt-12 flex w-full flex-col items-start">
+  <div class="flex w-full flex-col md:flex-row md:justify-between">
     <a href="/">
-      <img class="md:w-[70%]" src="/img/dd_logo.png"/>
+      <img class="md:w-[70%]" src="/img/dd_logo.png" />
     </a>
-    <button class="bg-discord-blue px-5 py-2 rounded-xl self-center md:self-end mt-4 md:mt-0">
+    <button
+      class="mt-4 self-center rounded-xl bg-discord-blue px-5 py-2 md:mt-0 md:self-end"
+    >
       Join the Discord
     </button>
   </div>
 
-  <p class=" mt-10 md:mt-20 text-center w-full text-lg md:text-3xl lg:text-4">Discussions with developers from the Jamstack community and the topics they're passionate about</p>
+  <p class="mt-10 xl:mt-8 2xl:mt-10 w-full text-center text-lg md:mt-20 md:text-3xl lg:text-2xl xl:text-3xl 2xl:text-5xl ">
+    Discussions with developers from the Jamstack community and the topics
+    they're passionate about
+  </p>
 </nav>
