--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -15,7 +15,7 @@
     <title>{{ title }}</title>
   </head>
   <body class="bg-primary-blue text-white w-screen h-screen flex flex-col">
-    <div class="flex flex-col w-[80%] md:w-4/5 lg:w-3/5 h-screen align-center self-center 3xl:text-3xl">
+    <div class="flex flex-col w-[80%] md:w-4/5 lg:w-3/5 xl:w-[70%] 2xl:w-3/5 h-screen align-center self-center 3xl:text-3xl">
 
       {% include "components/navbar.njk" %}
 
