--- a/src/index.njk
+++ b/src/index.njk
@@ -21,7 +21,7 @@ layout: layouts/base.njk
     {# TABLET AND UP #}
     <div class="rounded-xl hidden md:block w-full lg:min-w-[700px] h-[420px] 2xl:h-[540px] 3xl:h-[720px] mx-auto bg-border-gradient-pink-orange p-[12px] lg:p-[24px] xl:p-[18px] 3xl:p-[36px] mt-12 xl:mt-8 2xl:mt-12 overflow-hidden font-black">
       <div class="w-full h-full flex translate-x-[-24%]">
-        <div class="left bg-primary-blue h-full flex items-start ml-[-10px] flex-col gap-[42px] md:gap-[80px] lg:gap-[95px] xl:gap-[90px] 2xl:gap-[180px] 3xl:gap-[220px] p-6 lg:p-16 xl:p-10 2x:p-16">
+        <div class="left bg-primary-blue h-full flex items-start ml-[-10px] flex-col gap-[42px] md:gap-[80px] xl:gap-[90px] 2xl:gap-[180px] 3xl:gap-[220px] p-6 xl:p-10 2x:p-16">
           <div class="w-[40%] lg:w-[30%] xl:w-[50%]">
             <p class="text-2xl md:text-3xl xl:text-4xl 2xl:text-5xl 3xl:text-6xl font-dark">{{ episode.topic }}</p>
             <p class="mt-3 text-orange capitalize">{{ episode.when }}</p>
@@ -31,7 +31,7 @@ layout: layouts/base.njk
             <p class="text-discord-blue">discord.gg/jamstack</p>
           </div>
         </div>
-        <div class="right bg-primary-blue h-full flex items-end justify-center ml-[10px] flex-col pr-10 lg:pr-24 xl:pr-10">
+        <div class="right bg-primary-blue h-full flex items-end justify-center ml-[10px] flex-col pr-10 lg:pr-18 xl:pr-10">
           <img class="rounded-full w-[35%] lg:w-[30%] xl:w-[25%] 2xl:w-[30%]" src="{{ episode.photo | removeTrailingSlash }}"/>
           <h1 class="bg-pink text-xl 3xl:text-3xl px-4 lg:px-16 xl:px-4 2xl:px-16 3xl:px-18 py-2 lg:py-5 xl:py-3 mt-[-32px]">{{ episode.name }}</h1>
           <p class="font-medium leading-10 mr-4 3xl:mr-0">{{ episode.title }}</p>
@@ -51,7 +51,7 @@ layout: layouts/base.njk
     <a class="" href="{{ "/episodes/" + episode.name | cleanUrl }}">
       <div class="rounded-2xl w-full mx-auto h-auto bg-gradient-to-r from-pink to-orange hover:from-[#0760e5] hover:to-[#fc4aea] p-[6px] mt-20">
         <div class="flex flex-col space-around h-full bg-primary-blue  text-white rounded-2xl p-7">
-          <img class="rounded-full self-center mt-[-92px] w-[200px] h-[200px]" src="{{ episode.photo | removeTrailingSlash }}"/>
+          <img class="rounded-full self-center mt-[-92px] " src="{{ episode.photo | removeTrailingSlash }}"/>
           <h2 class='bg-pink text-center mt-[-32px] rounded-md py-3'>{{ episode.name }}</h2>
           <span class="mt-4">
             <p class="font-medium text-sm">{{ episode.title }}</p>
