--- a/src/episode-pages.njk
+++ b/src/episode-pages.njk
@@ -7,7 +7,7 @@ permalink: "episodes/{{ episode.name | slug }}/"
 layout: layouts/base.njk
 ---
 
-<div class="w-full flex flex-col-reverse sm:flex-row justify-between h-[420px] mx-auto mt-48 sm:mt-24 font-black">
+<div class="w-full flex flex-col-reverse sm:flex-row justify-between h-[420px] mx-auto mt-48 sm:mt-24 3xl:mt-48 font-black">
     <div class="h-full flex flex-col justify-between p-6">
       <div class="w-full text-center sm:text-start">
         <p class="text-2xl md:text-3xl xl:text-4xl 2xl:text-5xl 3xl:text-6xl font-dark">{{ episode.topic }}</p>
