Fixed card not showing for a flash on smaller screens

--- a/src/index.njk
+++ b/src/index.njk
@@ -19,7 +19,7 @@ layout: layouts/base.njk
       </div>
     </div>
     {# TABLET AND UP #}
-    <div class="rounded-xl hidden md:block w-full lg:min-w-[700px] h-[420px] 2xl:h-[540px] 3xl:h-[720px] mx-auto bg-border-gradient-pink-orange p-[12px] lg:p-[24px] xl:p-[18px] 3xl:p-[36px] mt-12 xl:mt-8 2xl:mt-12 overflow-hidden font-black">
+    <div class="rounded-xl hidden sm:block w-full lg:min-w-[700px] h-[420px] 2xl:h-[540px] 3xl:h-[720px] mx-auto bg-border-gradient-pink-orange p-[12px] lg:p-[24px] xl:p-[18px] 3xl:p-[36px] mt-12 xl:mt-8 2xl:mt-12 overflow-hidden font-black">
       <div class="w-full h-full flex translate-x-[-24%]">
         <div class="left bg-primary-blue h-full flex items-start ml-[-10px] flex-col gap-[42px] md:gap-[80px] xl:gap-[90px] 2xl:gap-[180px] 3xl:gap-[220px] p-6 xl:p-10 2x:p-16">
           <div class="w-[40%] lg:w-[30%] xl:w-[50%]">
